assets/_sass/_sections.scss
.front{
	section.img {
		h2 {
			font-size: 220%;
		}
		h3 {
			font-size: 200%;
		}	
	}
	section:not(.img) h2 {
		background: $medium;
		color: #fff;
		margin: 0em -2.5em 0em -2.5em;
		padding: 0.5em 2.5em;
		font-size: 240%;
	}
}

section {
	padding: 0em 4em 2em 4em;
	line-height: 1.5em;
 	
	&:first-of-type, &.img:first-of-type, &.front.img:first-of-type, &.front:first-of-type {
		padding-top: 3em;
		padding-left: 0em;
		padding-right: 0em;
	}
	.sectionContent {
		padding: 0em 4em 2em 4em;
	}

	a.registerbutton {
		background: $medium;
		border-radius: 10px;
		border: 2px solid #fff;
		box-shadow: 0px 2px 5px rgba(0,0,0,0.5);
		color: #fff;
		padding: 0.5em 1em;
	}

	table {
		width: 100%;

		thead {
			background-color: $medium;
			color: #fff;
			font-weight: bold;
			text-align: left;
		}
		th, td {
			padding: 0.25em 0.5em;
		}
		td {
			&.price { 
				white-space: nowrap; 
				text-align: right;
			}
		}
		tr:nth-child(2n) {
			background-color: #4090ac20;
		}

	}

 	&.inverse {
		background-color: $medium;
		color: #fff;
		padding-top: 1em;

		a {
			color: $light;
		}

		button.dark {
			background: #fff;
			color: $medium;
		}
	}
	&.inverse+section p:first-child, &.img+section p:first-child { padding-top: 2em; }
	&.img+section.map { padding-top: 0em; }
	&:first-of-type {
		border-top: 2.3em solid $medium;
		&.inverse {
			padding-top: 2em;
		}
	}

	&.img {
		color: #fff;
		border-top: none;
		background-size: cover;
		background-position: top left;
		width: 100%;
		height: 100%;
		background-position: bottom right, top left;
		background-repeat: repeat-y, no-repeat;
		background-size: cover, cover;
		background-blend-mode: multiply, normal;
	}
	&.map {
		padding: 0;
	}

	&:not(:first-of-type) {
		ul {
			padding: 0em 1em 1em 1.5em;
			li {
				list-style-type: disc;
			}
		}
		ol {
			padding: 0em 1em 1em 1em;
			counter-reset: ze-count;
			li {
  			counter-increment: ze-count;
			}
			li::before {
  			content: counter(ze-count) ". ";
  			position: relative;
  			left: -0.5em;
			}
		}
	}


}
section.img .sectionContent a {
	color: #fff;
	text-decoration: underline;
}


@media (max-width: 500px) {
	.front section.img .sectionContent {
		text-align: center;
		h1 {
			font-size: 300%;
		}
		h2 {
			font-size: 220%;
		}
		h3 {
			font-size: 190%;
		}

	}
	.front {
		section:not(.img) h2 {
			background: $medium;
			color: #fff;
			margin: -0.5em -0.5em 0em -0.5em;
			padding: 0.5em 0.5em;
			font-size: 240%;
		}
	}


	section {
		padding: 1em 1em 2em 1em;

		&:first-of-type, &.img:first-of-type, &.front.img:first-of-type, &.front:first-of-type {
			padding-top: 0em;
			padding-left: 0em;
			padding-right: 0em;
		}
		.sectionContent {
			padding: 1em 1em 0em 1em;
		}

	}

}

